[tool.poetry]
name = "map"
version = "0.2.0"
description = ""
authors = ["Nima Rahnemoon <nrahnemoon@gmail.com>"]
readme = "README.md"
packages = [{include = "map"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ipython = "^8.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
bumpver = "^2022.1120"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
    '^version = "{version}"$',
]
"README.md" = [
    "^VERSION: {version}$",
]
"map/__init__.py" = [
    '^__version__ = "{version}"$',
]
